<resources>
    <string name="app_name">PetCareApp</string>
    <string name="email">Email</string>
    <string name="direccion">Dirección</string>
    <string name="contrasenia">Contraseña</string>
    <string name="repita_contrasenia">Repita Contraseña</string>
    <string name="numero">Número de Contacto</string>
    <string name="txt_datos">Excelente, por último ingresa tus datos de contacto y crea una contraseña</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="contrasenia_olvidada">Olvidé mi contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo_de_la_app">Logo de la app</string>
    <string name="btn_mi_perfil">Boton para ir a mi perfil</string>
    <string name="bs_mis_mascotas">Mis Mascotas</string>
    <string name="txt_vista_duenio_vacia">Para comenzar presiona el botón de abajo para agregar a tus mascotas</string>
    <string name="btn_agregar_mascota">Agregar Mascota</string>
    <string name="nombre_mascota_example">Nombre de Mascota</string>
    <string name="raza_example">Raza</string>
    <string name="btn_mis_mascotas">Boton para navegar a \"Mis Mascotas\"</string>
    <string name="btn_mis_chats">Boton para navegar a \"Mis Chats\"</string>
    <string name="hint_nombre">Nombre completo</string>
    <string name="desc_foto_usuario">Preview de la foto ingresada</string>
    <string name="desc_agregar_foto">Boton para agregar una foto en el registro</string>
    <string name="desc_btn_continuar">Boton para continuar con el registro</string>
    <string name="txt_instrucciones">Muy bien, ingresa tu nombre y foto de perfil para continuar</string>
    <string name="hint_descripcion_usuario">Sobre mí…</string>
    <string name="desc_btn_atras">Boton para volver a la pantalla anterior</string>
    <string name="desc_btn_nav_mapa_cuidador">Boton para acceder al mapa desde la pantalla del cuidador</string>
    <string name="desc_btn_nav_perfil_cuidador">Boton para acceder al perfil desde la pantalla del cuidador</string>
    <string name="desc_btn_nav_chats_cuidador">Boton para acceder a los chats desde la pantalla del cuidador</string>
    <string name="txt_registro_cuidador">Registro Cuidador</string>
    <string name="txt_sin_solicitudes">De momento no tienes solicitudes, ingresa a tu perfil para activar tu ubicacion y que las usuarios puedan verla</string>
    <string name="edad_mascota">Edad (en meses)</string>
    <string name="descripcion_mascota">Describe a tu mascota y detalla cuidados especiales</string>
    <string name="nombre_mascota">Nombre mascota</string>
    <string name="instrucciones_datos_mascota">Ingresa los datos requeridos para registrar a tu mascota</string>
    <string name="titulo_mapa_veterinarias">Mapa Veterinarias</string>
    <string name="desc_btn_volver">Volver</string>
    <string name="txt_nav_mi_perfil">Mi Perfil</string>
    <string name="txt_nombre_perfil">Nombre:</string>
    <string name="txt_email_perfil">Email:</string>
    <string name="txt_telefono_perfil">Teléfono:</string>
    <string name="txt_direccion_perfil">Dirección:</string>
    <string name="btn_editar_perfil">Editar Perfil</string>
    <string name="switch_disponibilidad">¿Disponible?</string>
</resources>