<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registroDuenio1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FDFCFB"
    android:padding="24dp"
    tools:context=".RegistroDuenioNombreFotoActivity">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_instrucciones"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/abeezee_regular"/>

    <!-- Imagen circular + icono cámara -->
    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/imagePerfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_foto_usuario"
            android:src="@drawable/baseline_account_circle_24"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>


        <ImageView
            android:id="@+id/iconoCamara"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_agregar_foto"
            android:src="@drawable/ic_agregar_foto_24px"/>
    </FrameLayout>

    <!-- Campo nombre -->
    <EditText
        android:id="@+id/editNombreCuidador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:backgroundTint="#D97756"
        android:fontFamily="@font/abeezee_regular"/>

    <!-- Botón siguiente -->
    <ImageButton
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="200dp"
        android:background="@null"
        android:contentDescription="@string/desc_btn_continuar"
        android:src="@drawable/ic_siguiente" />
</LinearLayout>