<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FDFCFB"
    tools:context=".InicioDuenioActivity">

    <!-- Barra superior -->
    <LinearLayout
        android:id="@+id/barraSuperior"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#D97756"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnPerfil"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_user"
            android:contentDescription="@string/btn_mi_perfil" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bs_mis_mascotas"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/abeezee_regular"/>
    </LinearLayout>

    <!-- Mensaje de lista vacía -->
    <LinearLayout
        android:id="@+id/layoutVacio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_vista_duenio_vacia"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnAgregarMascota"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@null"
            android:contentDescription="@string/btn_agregar_mascota"
            android:src="@drawable/ic_agregar_mascota_vacio" />
    </LinearLayout>

    <!-- Lista de mascotas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMascotas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/barraSuperior"
        app:layout_constraintBottom_toTopOf="@id/barraInferior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_weight="1"
        android:visibility="gone"
        tools:listitem="@layout/item_mascota"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregarMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_agregar_mascota_vacio"
        android:contentDescription="Agregar nueva mascota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <!-- Barra inferior -->
    <LinearLayout
        android:id="@+id/barraInferior"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#A7F3D0"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/btn_mis_mascotas"
            android:src="@drawable/ic_mis_mascotas" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/btn_mis_chats"
            android:src="@drawable/ic_mis_chats" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
