<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMapCuidador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".cuidador.MapaCuidadorActivity">

    <LinearLayout
        android:id="@+id/barraSuperiorCuidador"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#D97756"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnPerfilCuidador"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/btn_mi_perfil"
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/tvTituloBarraCuidador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/abeezee_regular"
            android:text="@string/titulo_mapa_veterinarias"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/barraInferiorMapaCuidador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraSuperiorCuidador">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapFragmentCuidador"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/barraInferiorMapaCuidador"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#A7F3D0"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnNavInicioCuidador"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/desc_btn_nav_perfil_cuidador"
            android:src="@drawable/ic_lista_solicitudes" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnNavMapaVets"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/desc_btn_nav_mapa_cuidador"
            android:src="@drawable/ic_mapa"
            app:tint="@color/design_default_color_primary" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnNavChatsCuidador"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/desc_btn_nav_chats_cuidador"
            android:src="@drawable/ic_mis_chats" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>