<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainListaChatsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".duenio.ListaChatsActivity">

    <LinearLayout
        android:id="@+id/barraSuperior"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#D97756"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnPerfil"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/btn_mi_perfil"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/abeezee_regular"
            android:text="Chats"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewListaChats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/barraInferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraSuperior"
        tools:listitem="@layout/item_chat_preview" /> <!-- Necesitarás crear este item layout -->

    <TextView
        android:id="@+id/textViewNoChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No tienes chats activos."
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/barraInferior"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#A7F3D0"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnNavMisMascotas"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/btn_mis_mascotas"
            android:src="@drawable/ic_mis_mascotas" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnNavMisChats"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/btn_mis_chats"
            android:src="@drawable/ic_mis_chats" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>